tests/ui/traits/const-traits/reservation-impl-ice.stderr
error[E0277]: the trait bound `(): From<!>` is not satisfied
  --> $DIR/reservation-impl-ice.rs:9:18
   |
LL |     impls_from::<()>();
   |                  ^^ the trait `From<!>` is not implemented for `()`
   |
   = help: the following other types implement trait `From<T>`:
             `(T, T)` implements `From<[T; 2]>`
             `(T, T, T)` implements `From<[T; 3]>`
             `(T, T, T, T)` implements `From<[T; 4]>`
             `(T, T, T, T, T)` implements `From<[T; 5]>`
             `(T, T, T, T, T, T)` implements `From<[T; 6]>`
             `(T, T, T, T, T, T, T)` implements `From<[T; 7]>`
             `(T, T, T, T, T, T, T, T)` implements `From<[T; 8]>`
             `(T, T, T, T, T, T, T, T, T)` implements `From<[T; 9]>`
           and 4 others
note: required by a bound in `impls_from`
  --> $DIR/reservation-impl-ice.rs:4:24
   |
LL | const fn impls_from<T: [const] From<!>>() {}
   |                        ^^^^^^^^^^^^^^^ required by this bound in `impls_from`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
